corrected text and added text color

--- a/page2.html
+++ b/page2.html
@@ -8,8 +8,8 @@
 	<body>
 	
 		<header>
-			<h1>The basic html template</h1>
-			<p>intro to basic html syntax</p>
+            <h1>The Page Two Heading.</h1>
+            <p>This is the page two text.</p>
 		</header>
 		
 	</body>
